@@ -1,0 +1,5 @@
+from doit.tools import InteractiveAction
+
+def task_top():
+    cmd = "top"
+    return {'actions': [InteractiveAction(cmd)],}
